GH-Actions - Fix alignment issue

--- a/docs/assets/css/styles.scss
+++ b/docs/assets/css/styles.scss
@@ -103,17 +103,17 @@ body {
 }
 
 @media (min-width: 320px) {
-  h1, h2, h3, p {
+  h1, h2, h3 {
     font-size: 2.35rem;
   }
 }
 @media (min-width: 734px) {
-  h1, h2, h3, p {
+  h1, h2, h3 {
     font-size: 3.5rem;
   }
 }
 @media (min-width: 1024px) {
-  h1, h2, h3, p {
+  h1, h2, h3 {
     font-size: 3.8rem;
   }
 }
